--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,4 @@ License: GPL-3
 LazyData: TRUE
 URL: https://github.com/imanuelcostigan/predrcats
 BugReports: https://github.com/imanuelcostigan/predrcats/issues
-Suggests: testthat
+Suggests: testthat, covr
