--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,14 @@ Authors@R: c(
   person("Lionel", "Henry", , "lionel.hry@gmail.com", "ctb"),
   person("RStudio", role = "cph"))
 Description: A collection of predicate functions that return a single logical
-  value. The original predicate functions included in this package were
-  originally part of the 'purrr' package. The 'predrcats' name came courtesy of
-  Stefan Milton Bache.
+    value. The original predicate functions included in this package were originally
+    part of the 'purrr' package. The 'predrcats' name came courtesy of Stefan Milton
+    Bache.
 License: GPL-3
 LazyData: TRUE
 URL: https://github.com/imanuelcostigan/predrcats
 BugReports: https://github.com/imanuelcostigan/predrcats/issues
-Suggests: testthat, covr
+Suggests:
+    testthat,
+    covr
+RoxygenNote: 5.0.1
