--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(is_bare_logical)
 export(is_bare_numeric)
 export(is_bare_vector)
 export(is_character)
+export(is_complex)
 export(is_double)
 export(is_empty)
 export(is_formula)
@@ -19,6 +20,7 @@ export(is_list)
 export(is_logical)
 export(is_null)
 export(is_numeric)
+export(is_raw)
 export(is_scalar_atomic)
 export(is_scalar_character)
 export(is_scalar_double)
