--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(is_bare_list)
 export(is_bare_logical)
 export(is_bare_numeric)
 export(is_bare_vector)
+export(is_call)
 export(is_character)
 export(is_complex)
 export(is_double)
@@ -16,8 +17,10 @@ export(is_empty)
 export(is_formula)
 export(is_function)
 export(is_integer)
+export(is_language)
 export(is_list)
 export(is_logical)
+export(is_name)
 export(is_null)
 export(is_numeric)
 export(is_raw)
