--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,12 @@ export(is_numeric)
 export(is_raw)
 export(is_scalar_atomic)
 export(is_scalar_character)
+export(is_scalar_complex)
 export(is_scalar_double)
 export(is_scalar_integer)
 export(is_scalar_list)
 export(is_scalar_logical)
 export(is_scalar_numeric)
+export(is_scalar_raw)
 export(is_scalar_vector)
 export(is_vector)
