New is_scalar_na

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(is_scalar_double)
 export(is_scalar_integer)
 export(is_scalar_list)
 export(is_scalar_logical)
+export(is_scalar_na)
 export(is_scalar_numeric)
 export(is_scalar_raw)
 export(is_scalar_vector)
